force-app/main/default/objects/Vehicle__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>