force-app/main/default/objects/Vehicle__c/fields/Actual_LTV__c.field-meta.xml
<CustomField>
    <fullName>Actual_LTV__c</fullName>
    <label>Actual LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>