force-app/main/default/objects/Vehicle__c/fields/Advance_EMI__c.field-meta.xml
<CustomField>
    <fullName>Advance_EMI__c</fullName>
    <label>Advance EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>