force-app/main/default/objects/Vehicle__c/fields/Asset_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Asset_Insurance_Premium__c</fullName>
    <label>Asset Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>