force-app/main/default/objects/Vehicle__c/fields/Asset_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Asset_Insurance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Insurance Required</label>
    <type>Checkbox</type>
</CustomField>