force-app/main/default/objects/Vehicle__c/fields/Blacklist_Info__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Info__c</fullName>
    <label>Blacklist Info</label>
    <type>TextArea</type>
</CustomField>