force-app/main/default/objects/Vehicle__c/fields/Blacklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Status__c</fullName>
    <label>Blacklist Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>