force-app/main/default/objects/Vehicle__c/fields/Body_Funding__c.field-meta.xml
<CustomField>
    <fullName>Body_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Funding</label>
    <type>Checkbox</type>
</CustomField>