force-app/main/default/objects/Vehicle__c/fields/Body_Funding_Amount_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Body_Funding_Amount_If_Applicable__c</fullName>
    <label>Body Funding Amount (If Applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>