force-app/main/default/objects/Vehicle__c/fields/Body_Maker_Address_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Body_Maker_Address_If_Applicable__c</fullName>
    <label>Body Maker Address (If Applicable)</label>
    <type>TextArea</type>
</CustomField>