force-app/main/default/objects/Vehicle__c/fields/Body_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Body_Maker_Name__c</fullName>
    <label>Body Maker Name (If Applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>