force-app/main/default/objects/Vehicle__c/fields/Credit_Facility_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Facility_Amount__c</fullName>
    <label>Credit Facility Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>