force-app/main/default/objects/Vehicle__c/fields/Credit_Shield_Premium__c.field-meta.xml
<CustomField>
    <fullName>Credit_Shield_Premium__c</fullName>
    <label>Credit Shield Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>