force-app/main/default/objects/Vehicle__c/fields/Credit_Shield_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Shield_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Shield Required</label>
    <type>Checkbox</type>
</CustomField>