force-app/main/default/objects/Vehicle__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Dealer_Master__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>