force-app/main/default/objects/Vehicle__c/fields/Dealer_has_Issued_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Dealer_has_Issued_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dealer has Issued Quotation</description>
    <label>Dealer has Issued Quotation</label>
    <type>Checkbox</type>
</CustomField>