force-app/main/default/objects/Vehicle__c/fields/Dealer_has_Shared_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Dealer_has_Shared_Account_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer has Shared Account Details</label>
    <type>Checkbox</type>
</CustomField>