force-app/main/default/objects/Vehicle__c/fields/Eligible_LTV__c.field-meta.xml
<CustomField>
    <fullName>Eligible_LTV__c</fullName>
    <label>Eligible LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>