force-app/main/default/objects/Vehicle__c/fields/EMI__c.field-meta.xml
<CustomField>
    <fullName>EMI__c</fullName>
    <formula>CEILING((Vehicle_Cost__c* (ROI__c/12) )*
(((1+(ROI__c/12))^ VALUE(TEXT(Tenure__c)))/
(((1+(ROI__c/12))^ VALUE(TEXT(Tenure__c)))-1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>