force-app/main/default/objects/Vehicle__c/fields/Estimated_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Valuation__c</fullName>
    <label>Estimated Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>