force-app/main/default/objects/Vehicle__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <label>Father&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>