force-app/main/default/objects/Vehicle__c/fields/Financer__c.field-meta.xml
<CustomField>
    <fullName>Financer__c</fullName>
    <label>Financer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>