force-app/main/default/objects/Vehicle__c/fields/Fitness_Validity__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Validity__c</fullName>
    <label>Fitness Validity</label>
    <type>Date</type>
</CustomField>