force-app/main/default/objects/Vehicle__c/fields/Funding_Limit__c.field-meta.xml
<CustomField>
    <fullName>Funding_Limit__c</fullName>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>