force-app/main/default/objects/Vehicle__c/fields/IDV__c.field-meta.xml
<CustomField>
    <fullName>IDV__c</fullName>
    <label>IDV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>