force-app/main/default/objects/Vehicle__c/fields/Is_Asset_Registrable__c.field-meta.xml
<CustomField>
    <fullName>Is_Asset_Registrable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Asset Registrable</label>
    <type>Checkbox</type>
</CustomField>