force-app/main/default/objects/Vehicle__c/fields/IsUsedVehicleCategory__c.field-meta.xml
<CustomField>
    <fullName>IsUsedVehicleCategory__c</fullName>
    <formula>IF( CONTAINS( Product__r.Product_Category__c , &apos;Used&apos;),&apos;Used&apos;, &apos;New&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsUsedVehicleCategory</label>
    <type>Text</type>
</CustomField>