force-app/main/default/objects/Vehicle__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>Total_Loan__c / Total_Cost_of_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>