force-app/main/default/objects/Vehicle__c/fields/Manufactured_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Month_Year__c</fullName>
    <label>Manufactured Month-Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>