force-app/main/default/objects/Vehicle__c/fields/Margin_Money__c.field-meta.xml
<CustomField>
    <fullName>Margin_Money__c</fullName>
    <label>Margin Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>