force-app/main/default/objects/Vehicle__c/fields/National_Permit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Permit_Expiry_Date__c</fullName>
    <label>National Permit Expiry Date</label>
    <type>Date</type>
</CustomField>