force-app/main/default/objects/Vehicle__c/fields/National_Permit_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>National_Permit_Issued_By__c</fullName>
    <label>National Permit Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>