force-app/main/default/objects/Vehicle__c/fields/National_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Permit_Number__c</fullName>
    <label>National Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>