force-app/main/default/objects/Vehicle__c/fields/NOC_Details__c.field-meta.xml
<CustomField>
    <fullName>NOC_Details__c</fullName>
    <label>NOC Details</label>
    <type>TextArea</type>
</CustomField>