force-app/main/default/objects/Vehicle__c/fields/Number_of_Asset_Unit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Asset_Unit__c</fullName>
    <label>Number of Asset Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>