force-app/main/default/objects/Vehicle__c/fields/Number_of_Body_Unit_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Body_Unit_If_Applicable__c</fullName>
    <label>Number of Body Unit (If Applicable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>