force-app/main/default/objects/Vehicle__c/fields/Number_Of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Vehicles__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Existing Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>