force-app/main/default/objects/Vehicle__c/fields/Original_Invoice_If_Non_registrable__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_If_Non_registrable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Invoice (If Non-registrable)</label>
    <type>Checkbox</type>
</CustomField>