force-app/main/default/objects/Vehicle__c/fields/Owner_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Serial_Number__c</fullName>
    <label>Owner Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>