force-app/main/default/objects/Vehicle__c/fields/Plough_Back__c.field-meta.xml
<CustomField>
    <fullName>Plough_Back__c</fullName>
    <label>Plough Back %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>