force-app/main/default/objects/Vehicle__c/fields/Plough_Black_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plough_Black_Amount__c</fullName>
    <label>Plough Black Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>