force-app/main/default/objects/Vehicle__c/fields/PUC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PUC_Expiry_Date__c</fullName>
    <label>PUC Expiry Date</label>
    <type>Date</type>
</CustomField>