force-app/main/default/objects/Vehicle__c/fields/PUC_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>PUC_Serial_Number__c</fullName>
    <label>PUC Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>