force-app/main/default/objects/Vehicle__c/fields/RC_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>RC_Mobile_Number__c</fullName>
    <label>RC Mobile Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>