force-app/main/default/objects/Vehicle__c/fields/RC_Status__c.field-meta.xml
<CustomField>
    <fullName>RC_Status__c</fullName>
    <label>RC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>