force-app/main/default/objects/Vehicle__c/fields/RTO_Name__c.field-meta.xml
<CustomField>
    <fullName>RTO_Name__c</fullName>
    <label>RTO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>