force-app/main/default/objects/Vehicle__c/fields/RTO_Value__c.field-meta.xml
<CustomField>
    <fullName>RTO_Value__c</fullName>
    <label>RTO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>