force-app/main/default/objects/Vehicle__c/fields/State_Permit_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Permit_Issue_Date__c</fullName>
    <label>State Permit Issue Date</label>
    <type>Date</type>
</CustomField>