force-app/main/default/objects/Vehicle__c/fields/State_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Permit_Number__c</fullName>
    <label>State Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>