force-app/main/default/objects/Vehicle__c/fields/State_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Permit_Type__c</fullName>
    <label>State Permit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>