force-app/main/default/objects/Vehicle__c/fields/Subvention__c.field-meta.xml
<CustomField>
    <fullName>Subvention__c</fullName>
    <label>Subvention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>