force-app/main/default/objects/Vehicle__c/fields/Tax_Paid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Tax_Paid_Upto__c</fullName>
    <label>Tax Paid Upto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>