force-app/main/default/objects/Vehicle__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure (In Month Per Vehicle)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>