force-app/main/default/objects/Vehicle__c/fields/Tenure_In_Month_Per_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Tenure_In_Month_Per_Vehicle__c</fullName>
    <label>Tenure (In Month Per Vehicle)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>