force-app/main/default/objects/Vehicle__c/fields/Total_Cost_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Asset__c</fullName>
    <label>Total Cost of Asset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>