force-app/main/default/objects/Vehicle__c/fields/Total_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan__c</fullName>
    <formula>Total_Cost_of_Asset__c -  Margin_Money__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>