force-app/main/default/objects/Vehicle__c/fields/Update_Vahan_Details__c.field-meta.xml
<CustomField>
    <fullName>Update_Vahan_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Vahan Details</label>
    <type>Checkbox</type>
</CustomField>