force-app/main/default/objects/Vehicle__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>