force-app/main/default/objects/Vehicle__c/fields/Vehicle_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Cost__c</fullName>
    <label>Vehicle Cost (Per Vehicle)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>