force-app/main/default/objects/Vehicle__c/fields/Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Master</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>