force-app/main/default/objects/Vehicle__c/fields/Vehicle_Pollution_Norm_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Pollution_Norm_Description__c</fullName>
    <label>Vehicle Pollution Norm Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>