force-app/main/default/objects/Vehicle__c/recordTypes/New_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>New_Vehicle</fullName>
    <active>true</active>
    <description>New Vehicle Record Type</description>
    <label>New Vehicle</label>
</RecordType>