force-app/main/default/objects/Vehicle__c/recordTypes/Used_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Used_Vehicle</fullName>
    <active>true</active>
    <description>Used Vehicle Record Type</description>
    <label>Used Vehicle</label>
</RecordType>