force-app/main/default/objects/Vehicle__c/validationRules/RestrictUserToUpdateName.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUserToUpdateName</fullName>
    <active>true</active>
    <description>Restrict User To Update Name</description>
    <errorConditionFormula>AND(ISNEW() == false , ISCHANGED(Name) )</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to change the name.</errorMessage>
</ValidationRule>